<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">My Favorite Movies</string>
    <string name="str_titulo">Title:</string>
    <string name="str_nome_filme">Gone With The Wind</string>
    <string name="str_sinopse">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industries standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="str_btn_comprar">Buy for $ 9,90</string>
    <string name="str_btn_alugar">Rent for $ 3,90</string>
</resources>