<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_background"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/imageViewDislike"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintHorizontal_bias="0.525"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/imageViewCapaFilme"
            app:srcCompat="@drawable/ic_baseline_thumb_down_alt_24" />

        <ImageView
            android:id="@+id/imageViewMais"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/imageViewCapaFilme"
            app:srcCompat="@drawable/ic_baseline_playlist_add_24" />

        <ImageView
            android:id="@+id/imageViewCapaFilme"
            android:layout_width="0dp"
            android:layout_height="229dp"
            android:foreground="@color/thumb_foreground"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/oventolevou" />

        <TextView
            android:id="@+id/textViewLabelTituloFilme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/str_titulo"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewDislike" />

        <TextView
            android:id="@+id/textViewNomeTituloFilme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/str_nome_filme"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textViewLabelTituloFilme"
            app:layout_constraintStart_toEndOf="@+id/textViewLabelTituloFilme" />

        <TextView
            android:id="@+id/textViewDescricaoFilme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/str_sinopse"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewLabelTituloFilme" />

        <ImageView
            android:id="@+id/imageViewPlay"
            android:layout_width="110dp"
            android:layout_height="110dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewCapaFilme"
            app:layout_constraintEnd_toEndOf="@+id/imageViewCapaFilme"
            app:layout_constraintStart_toStartOf="@+id/imageViewCapaFilme"
            app:layout_constraintTop_toTopOf="@+id/imageViewCapaFilme"
            app:srcCompat="@drawable/ic_baseline_play_circle_outline_24" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.08" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.92" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <ImageView
            android:id="@+id/imageViewLike"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/imageViewCapaFilme"
            app:srcCompat="@drawable/ic_baseline_thumb_up_24" />

        <Button
            android:id="@+id/buttonComprar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:background="@color/btn_color"
            android:text="@string/str_btn_comprar"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewDescricaoFilme"
            app:layout_constraintVertical_bias="0.502" />

        <Button
            android:id="@+id/buttonAlugar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:background="@color/btn_color"
            android:text="@string/str_btn_alugar"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/textViewDescricaoFilme" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>